<resources>
    <string name="app_name">Feed Me Service</string>
    <string name="slogan">Order Food Now</string>
    <string name="singIn">Sign In</string>
    <string name="singUp">Sign Up</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_tracking_order">TrackingOrder</string>
    <string name="shippers_management">Shippers Management</string>

</resources>
