<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_banner"
            android:icon="@drawable/ic_crop_landscape_black_24dp"
            android:title="Banner"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu"
            android:iconTint="@android:color/white"/>

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/order"
            android:iconTint="@android:color/white"/>

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out"
            android:iconTint="@android:color/white"/>

    </group>

</menu>
